merging UI and validator